--- a/index.html
+++ b/index.html
@@ -463,7 +463,19 @@
 					</div>
 				</div>
 	
-				<!-- Second project: Krishna Store Data Analysis -->
+				<!-- Second project: EV Sales Analysis -->
+				<div class="col-md-4 d-flex ftco-animate">
+					<div class="blog-entry justify-content-end">
+						<a href="https://github.com/RohitRa200/EV-Sales-Analysis-India" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
+						</a>
+						<div class="text mt-3 float-right d-block">
+							<h3 class="heading"><a href="https://github.com/RohitRa200/EV-Sales-Analysis-India">EV Sales Analysis: Exploring India's Electric Vehicle Market</a></h3>
+							<p>Analyzed EV sales data in India, uncovering top-selling states, vehicle types, and category preferences. This project aids businesses and policymakers in making data-driven decisions for the growing EV sector. View the full project on GitHub.</p>
+						</div>
+					</div>
+				</div>
+	
+				<!-- Third project: Krishna Store Data Analysis -->
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
 						<a href="https://github.com/RohitRa200/StoreTrends-DataAnalysis" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
@@ -475,7 +487,7 @@
 					</div>
 				</div>
 	
-				<!-- Third project: Cyclistic Bike Share Data Analysis -->
+				<!-- Fourth project: Cyclistic Bike Share Data Analysis -->
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
 						<a href="https://github.com/RohitRa200/Cyclistic-Bike-Share-Analysis-.git" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
@@ -486,21 +498,10 @@
 						</div>
 					</div>
 				</div>
-	
-				<!-- Fourth project: EV Sales Analysis -->
-				<div class="col-md-4 d-flex ftco-animate">
-					<div class="blog-entry justify-content-end">
-						<a href="https://github.com/RohitRa200/EV-Sales-Analysis-India" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
-						</a>
-						<div class="text mt-3 float-right d-block">
-							<h3 class="heading"><a href="https://github.com/RohitRa200/EV-Sales-Analysis-India">EV Sales Analysis: Exploring India's Electric Vehicle Market</a></h3>
-							<p>Analyzed EV sales data in India, uncovering top-selling states, vehicle types, and category preferences. This project aids businesses and policymakers in making data-driven decisions for the growing EV sector. View the full project on GitHub.</p>
-						</div>
-					</div>
-				</div>
 			</div>
 		</div>
 	</section>
+	
 	
    <!-- <div class="col-md-4 d-flex ftco-animate">
         <div class="blog-entry justify-content-end">
